--- a/index.html
+++ b/index.html
@@ -1,25 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>클릭 게임</title>
+    <title>수학 스피드 게임</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial;
+            margin-top: 50px;
+        }
+        input {
+            font-size: 20px;
+            width: 100px;
+            text-align: center;
+        }
+        button {
+            font-size: 18px;
+            padding: 5px 10px;
+        }
+    </style>
 </head>
-<body style="text-align:center; font-family:Arial;">
+<body>
 
-<h1>12초 동안 버튼을 얼마나 많이 누를 수 있을까?</h1>
-<button onclick="score++">클릭!</button>
-<p>점수: <span id="score">0</span></p>
+<h1>수학 스피드 게임</h1>
+<h2 id="timer">남은 시간: 60초</h2>
+<h2 id="score">점수: 0</h2>
+
+<h2 id="question"></h2>
+
+<input type="number" id="answer" />
+<button onclick="checkAnswer()">확인</button>
 
 <script>
 let score = 0;
-let time = 12;
+let timeLeft = 60;
+let currentAnswer = 0;
 
-setInterval(() => {
-  document.getElementById("score").innerText = score;
-}, 100);
+function generateQuestion() {
+    let num1 = Math.floor(Math.random() * 90) + 10;
+    let num2 = Math.floor(Math.random() * 90) + 10;
+    currentAnswer = num1 + num2;
+    document.getElementById("question").innerText = num1 + " + " + num2 + " = ?";
+    document.getElementById("answer").value = "";
+}
 
-setTimeout(() => {
-  alert("게임 끝! 점수는 " + score);
-}, 10000);
+function checkAnswer() {
+    let userAnswer = Number(document.getElementById("answer").value);
+    if (userAnswer === currentAnswer) {
+        score++;
+    } else {
+        score--;
+    }
+    document.getElementById("score").innerText = "점수: " + score;
+    generateQuestion();
+}
+
+function startTimer() {
+    let timerInterval = setInterval(function() {
+        timeLeft--;
+        document.getElementById("timer").innerText = "남은 시간: " + timeLeft + "초";
+        if (timeLeft <= 0) {
+            clearInterval(timerInterval);
+            alert("게임 종료! 최종 점수: " + score);
+            location.reload();
+        }
+    }, 1000);
+}
+
+generateQuestion();
+startTimer();
 </script>
 
 </body>
