--- a/index.html
+++ b/index.html
@@ -1,45 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>수학 스피드 게임</title>
+    <title>수학 레벨 게임</title>
     <style>
         body {
             text-align: center;
             font-family: Arial;
             margin-top: 50px;
+            background-image: url("0119 인병인127626.JPG"); /* 배경 이미지 파일명 */
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: white;
+            text-shadow: 1px 1px 3px black;
         }
+
+        .game-box {
+            background-color: rgba(0,0,0,0.6);
+            padding: 20px;
+            border-radius: 15px;
+            display: inline-block;
+        }
+
         input {
             font-size: 20px;
             width: 100px;
             text-align: center;
         }
+
         button {
             font-size: 18px;
             padding: 5px 10px;
+            margin: 5px;
         }
     </style>
 </head>
 <body>
 
-<h1>수학 스피드 게임</h1>
-<h2 id="timer">남은 시간: 60초</h2>
-<h2 id="score">점수: 0</h2>
+<div class="game-box">
 
-<h2 id="question"></h2>
+<h1>수학 레벨 게임</h1>
 
-<input type="number" id="answer" />
-<button onclick="checkAnswer()">확인</button>
+<div id="levelSelect">
+    <h2>레벨을 선택하세요</h2>
+    <button onclick="startGame(1)">1단계 (덧셈)</button>
+    <button onclick="startGame(2)">2단계 (덧셈+뺄셈)</button>
+    <button onclick="startGame(3)">3단계 (덧셈+뺄셈+나눗셈)</button>
+    <button onclick="startGame(4)">4단계 (모든 연산)</button>
+</div>
+
+<div id="gameArea" style="display:none;">
+    <h2 id="timer">남은 시간: 60초</h2>
+    <h2 id="score">점수: 0</h2>
+    <h2 id="question"></h2>
+
+    <input type="number" id="answer" />
+    <button onclick="checkAnswer()">확인</button>
+</div>
+
+</div>
 
 <script>
 let score = 0;
 let timeLeft = 60;
 let currentAnswer = 0;
+let level = 1;
+let timerInterval;
+
+function startGame(selectedLevel) {
+    level = selectedLevel;
+    document.getElementById("levelSelect").style.display = "none";
+    document.getElementById("gameArea").style.display = "block";
+    generateQuestion();
+    startTimer();
+}
 
 function generateQuestion() {
-    let num1 = Math.floor(Math.random() * 90) + 10;
-    let num2 = Math.floor(Math.random() * 90) + 10;
-    currentAnswer = num1 + num2;
-    document.getElementById("question").innerText = num1 + " + " + num2 + " = ?";
+    let num1 = Math.floor(Math.random() * 20) + 1;
+    let num2 = Math.floor(Math.random() * 20) + 1;
+    let operator;
+
+    if (level === 1) {
+        operator = "+";
+    } else if (level === 2) {
+        operator = ["+", "-"][Math.floor(Math.random() * 2)];
+    } else if (level === 3) {
+        operator = ["+", "-", "/"][Math.floor(Math.random() * 3)];
+    } else {
+        operator = ["+", "-", "/", "*"][Math.floor(Math.random() * 4)];
+    }
+
+    if (operator === "+") {
+        currentAnswer = num1 + num2;
+    } else if (operator === "-") {
+        currentAnswer = num1 - num2;
+    } else if (operator === "*") {
+        currentAnswer = num1 * num2;
+    } else if (operator === "/") {
+        currentAnswer = num1;
+        num1 = num1 * num2; // 나눗셈이 딱 떨어지도록
+        currentAnswer = num1 / num2;
+    }
+
+    document.getElementById("question").innerText = num1 + " " + operator + " " + num2 + " = ?";
     document.getElementById("answer").value = "";
 }
 
@@ -55,7 +118,7 @@ function checkAnswer() {
 }
 
 function startTimer() {
-    let timerInterval = setInterval(function() {
+    timerInterval = setInterval(function() {
         timeLeft--;
         document.getElementById("timer").innerText = "남은 시간: " + timeLeft + "초";
         if (timeLeft <= 0) {
@@ -66,8 +129,12 @@ function startTimer() {
     }, 1000);
 }
 
-generateQuestion();
-startTimer();
+// 🔥 엔터키로 제출
+document.getElementById("answer").addEventListener("keydown", function(event) {
+    if (event.key === "Enter") {
+        checkAnswer();
+    }
+});
 </script>
 
 </body>
